--- a/EssentialLayers.Request/EssentialLayers.Request.csproj
+++ b/EssentialLayers.Request/EssentialLayers.Request.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<PackageId>$(AssemblyName)</PackageId>
 		<Title>$(AssemblyName)</Title>
-		<Version>1.2.8</Version>
+		<Version>1.3.0</Version>
 		<Authors>MSoto</Authors>
 		<Company>Mario Soto Moreno Co</Company>
 		<Description>EssentialLayers.Request is a complement to the package `EssentialLayers` to provide an extra layer for using http requests in an easy way.</Description>
@@ -17,7 +17,16 @@
 		<RepositoryUrl>https://github.com/MatProgrammerSM/EssentialLayers</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Request Http Delete Get Post Put</PackageTags>
-		<PackageReleaseNotes>The HttpService and RequestService classes are now public</PackageReleaseNotes>
+		<PackageReleaseNotes> - Reverted dependency type from Singleton to Scoped to allow multiple instances of the same service `05-03-2025`
+ - The HttpService and RequestService classes are now public `21-02-2025`
+ - Implementation of IHttpClientFactory to better dependency manage of the "HttpClient" `18-02-2025`
+ - It was solved the way of configure globally (ConfigureRequest) in the program file `23-01-2025`
+ - Was solved the configuration issues to Http and Request services + RequestHelper + Logs implementation `13/12/2024`
+ - It was added a new HttpHelper `12/12/2024`
+ - It was removed the TRequest at the method GetAsync + Logs `06/12/2024`
+ - Solved issue on serialize() &amp; Added insensitiveMapping with default true `12/11/2024`
+ - It was added a content type in a Request and changed the models location + Fixed reponse issue `05/11/2024`
+ - It's added "CastResultAsResultHelper" parameter at HttpOption model in HttpService `29/10/2024`</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -28,7 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EssentialLayers" Version="1.6.0" />
+		<PackageReference Include="EssentialLayers" Version="1.6.1" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
 	</ItemGroup>
 
