--- a/EssentialLayers.Request/EssentialLayers.Request.csproj
+++ b/EssentialLayers.Request/EssentialLayers.Request.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<PackageId>$(AssemblyName)</PackageId>
 		<Title>$(AssemblyName)</Title>
-		<Version>1.4.0</Version>
+		<Version>1.4.1</Version>
 		<Authors>MSoto</Authors>
 		<Company>Mario Soto Moreno Co</Company>
 		<Description>EssentialLayers.Request is a complement to the package `EssentialLayers` to provide an extra layer for using http requests in an easy way.</Description>
@@ -17,7 +17,8 @@
 		<RepositoryUrl>https://github.com/msotodev/EssentialLayers/tree/master/EssentialLayers.Request</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Request Http Delete Get Post Put</PackageTags>
-		<PackageReleaseNotes> - Now all methods of RequestService &amp; RequestHelper allows nullable results; It was fixed issue in uribase `21-05-2025`
+		<PackageReleaseNotes> - Remove repeated headers `17-07-2025`
+ - Now all methods of RequestService &amp; RequestHelper allows nullable results; It was fixed issue in uribase `21-05-2025`
  - New Delete method in HttpService only with url `16-04-2025`
  - Reverted dependency type from Scopped to Singleton; Beacuse always allows the overriding of base uri `14-04-2025` 
 - Now, the status "Created" is considered to be a successful response and "Unauthorized" to notify by message "Unauthorized" `14/04/2025`
