--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -13,9 +13,11 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Result-Handling Cache Error-Handling Helpers Exstension</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.6.5</Version>
+		<Version>1.6.6</Version>
 		<Title>$(AssemblyName)</Title>
-		<PackageReleaseNotes> - New Response design pattern to manage responses of methods and override to Success in ResultHelper `29/07/2025`
+		<PackageReleaseNotes> - Updating of dependencies to the last version `14-10-2025`
+ - New ToBase64 extension in String extension `14/08/2025`
+ - New Response design pattern to manage responses of methods and override to Success in ResultHelper `29/07/2025`
  - Better implementation of RemoveDiacritics; New parameter 'includeWhiteSpaces' in IsEmpty and NotEmpty in String extensions `21-05-2025`
  - New TryHanlder and fixed issues in Capitalize extension `07/04/2025`
  - Null validation in String extensions `03/03/2025`
@@ -33,9 +35,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
