- The IConnectionString service was removed to allowing the developer configure options, before to call UseDapper function `28/01/2026`  - Segregation of dependecy IProcedureService in IComplexProcedure, INormalProcedure and IMultipleProcedure `28/01/2026`

--- a/ASPNetCoreApi/ASPNetCoreApi.csproj
+++ b/ASPNetCoreApi/ASPNetCoreApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\EssentialLayers.Dapper\EssentialLayers.Dapper.csproj" />
     <ProjectReference Include="..\EssentialLayers\EssentialLayers.csproj" />
   </ItemGroup>
 
