--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -13,9 +13,12 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Result-Handling Cache Error-Handling Helpers Exstension</PackageTags>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
-		<Version>1.6.6</Version>
+		<Version>1.7.0</Version>
 		<Title>$(AssemblyName)</Title>
-		<PackageReleaseNotes> - Updating of dependencies to the last version `14-10-2025`
+		<PackageReleaseNotes> - feat: New GetBytes method in Extensions `25-02-2026`
+ - feat: New integer common option model `25-02-2026`
+ - feat: New sync and async abstractions about common methods `25-02-2026`
+ - Updating of dependencies to the last version `14-10-2025`
  - New ToBase64 extension in String extension `14/08/2025`
  - New Response design pattern to manage responses of methods and override to Success in ResultHelper `29/07/2025`
  - Better implementation of RemoveDiacritics; New parameter 'includeWhiteSpaces' in IsEmpty and NotEmpty in String extensions `21-05-2025`
