--- a/EssentialLayers/EssentialLayers.csproj
+++ b/EssentialLayers/EssentialLayers.csproj
@@ -25,6 +25,7 @@
  - Updating of nuget packages to the last version `18/02/2025`
  - New compress methods to bytes array and streams `13/01/2025`</PackageReleaseNotes>
 		<Authors>MSoto</Authors>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
